vendor/thiserror-1.0.24/tests/ui/transparent-struct-source.stderr
error: transparent error struct can't contain #[source]
 --> $DIR/transparent-struct-source.rs:5:18
  |
5 | pub struct Error(#[source] anyhow::Error);
  |                  ^^^^^^^^^
