vendor/thiserror-1.0.24/tests/ui/transparent-struct-source.rs
use thiserror::Error;

#[derive(Error, Debug)]
#[error(transparent)]
pub struct Error(#[source] anyhow::Error);

fn main() {}
